2006-10-31  Bruno Coudoin

	* src/gcompris/gcompris.c: (gc_locale_set): Fixed non relative call to bindtextdomain(). It was breaking translation with autopackage.
	Need to be tested.

2006-10-28 Bruno coudoin  <bruno.coudoin@free.fr>  

	- Added support for Somali
	
	* boards/flags/so.png:
	* configure.in:
	* docs/gcompris2spip.pl:
	* po/ChangeLog:
	* po/Makefile.in.in:
	* po/so.po:
	* src/gcompris/config.c:

2006-10-24  Yves Combe  <yves@ycombe.net>

	=== WARNING THIS PATCH SET HAS BEEN REVERTED ===

	autotools croos compilation with mingw32
	use glib headers instead of glibc (g_mkdir, g_unlink, g_stat)
	NEED MORE WORK. cvs maybe broken now.

	* Makefile.am:
	* acinclude.m4:
	* configure.in:
	* cross-configure.sh: script to run configure. Look variables.
	* po/Makefile.in.in:
	* src/boards/Makefile.am:
	* src/boards/gtans.c:
	* src/boards/gtans_support.c: (check_file_exists):
	* src/boards/py-mod-gcompris.c: (py_gcompris_child_watch_add),
	(py_gcompris_spawn_async):
	* src/gcompris/Makefile.am:
	* src/gcompris/binreloc.c: (_br_find_exe):
	* src/gcompris/board.c:
	* src/gcompris/board.h:
	* src/gcompris/file_selector.c: (parse_doc):
	* src/gcompris/gameutil.c: (gc_util_create_rootdir):
	* src/gcompris/gcompris.c: (activation_done), (gc_init):
	* src/gcompris/gcompris_db.c: (gc_db_init):
	* src/gcompris/images_selector.c: (parse_doc):
	* src/gcompris/menu.c: (gc_menu_load):
	* src/gcompris/properties.c: (gc_prop_new):
	* src/gcompris/sdlplayer.c: (errorv):
	* src/gcompris/soundutil.c:


	*** RELEASE 8.2BETA2 ***

2006-10-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- more fixes for the windows install procedure
	- connect4 has been fixed by Miguel to better manage the
	  party end.

	* Makefile.mingw.in:
	* boards/connect4/back.png: one pixel fix
	* configure.in:
	* gcompris-installer.nsi.in:
	* src/boards/python/connect4.py:
	* tools/py2exe/setup.py:

	*** RELEASE 8.2BETA1 ***

2006-10-22  Bruno coudoin  <bruno.coudoin@free.fr>
